feat: 마이페이지에서 발생할 수 있는 화면 전환 이벤트 정의

--- a/android/app/src/main/res/layout/item_pet_profile.xml
+++ b/android/app/src/main/res/layout/item_pet_profile.xml
@@ -44,6 +44,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                onSingleClick="@{() -> actionHandler.navigateToPetEdit(petView.id)}"
                 android:src="@drawable/ic_user_profile_set_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
