--- a/android/app/src/main/res/layout/bottom_sheet_footprint.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_footprint.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_status"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
             android:background="@drawable/rect_white_fill_30"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_foot_print"
@@ -28,16 +28,18 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tv_woof_status_time"
+                android:id="@+id/tv_woof_walk_status"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                walkStatus="@{vm.uiState.footPrintInfo}"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="15dp"
-                android:text="30분째 산책중"
                 android:textColor="@color/coral500"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="30분째 산책중" />
 
             <TextView
                 android:id="@+id/tv_woof_marker_createdAt"
@@ -47,6 +49,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:padding="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="55분전" />
@@ -114,6 +117,7 @@
             <TextView
                 android:id="@+id/tv_woof_dog_age"
                 style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
+                petAge="@{vm.uiState.footPrintInfo.petBirthDate}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -121,7 +125,6 @@
                 android:background="@drawable/rect_coral300_fill_20"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                petAge="@{vm.uiState.footPrintInfo.petBirthDate}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
                 tools:text="11살" />
