--- a/android/app/src/main/res/drawable/sel_dialog_coral400_fill_16.xml
+++ b/android/app/src/main/res/drawable/sel_dialog_coral400_fill_16.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="false" android:state_pressed="false">
         <shape>
-            <solid android:color="@color/blue" />
+            <solid android:color="@color/coral400" />
             <corners android:radius="16dp" />
         </shape>
     </item>
