--- a/android/app/src/main/res/layout/include_group_selector.xml
+++ b/android/app/src/main/res/layout/include_group_selector.xml
@@ -5,71 +5,79 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="com.happy.friendogly.presentation.ui.group.model.groupfilter.GroupFilter"/>
+
+        <import type="com.happy.friendogly.presentation.ui.group.model.groupfilter.GroupFilter" />
+
         <variable
             name="vm"
             type="com.happy.friendogly.presentation.ui.group.list.GroupListViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout_group_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <include
-            onSingleClick="@{()->vm.selectParticipationFilter()}"
-            android:layout_marginStart="12dp"
-            android:id="@+id/include_group_list_participation_filter"
-            layout="@layout/include_group_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:filterName="@{vm.participationFilter.filterName}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <include
-            onSingleClick="@{()->vm.selectSizeFilter()}"
-            android:id="@+id/include_group_list_size_filter"
-            layout="@layout/include_group_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            app:filterName="@{GroupFilter.SIZE_FILTER_SUBJECT}"
-            app:layout_constraintStart_toEndOf="@id/include_group_list_participation_filter"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <include
-            onSingleClick="@{()->vm.selectGenderFilter()}"
-            android:id="@+id/include_group_list_gender_filter"
-            layout="@layout/include_group_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            app:filterName="@{GroupFilter.GENDER_FILTER_SUBJECT}"
-            app:layout_constraintStart_toEndOf="@id/include_group_list_size_filter"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_margin="10dp"
-            android:id="@+id/rcv_group_list_filter"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/include_group_list_participation_filter"
-            app:layout_constraintBottom_toTopOf="@id/rcv_group_list_group"
-            tools:listitem="@layout/item_select_filter" />
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="horizontal">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:paddingHorizontal="12dp"
-            android:id="@+id/rcv_group_list_group"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/rcv_group_list_filter"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/item_group" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <include
+                android:id="@+id/include_group_list_participation_filter"
+                layout="@layout/include_group_filter"
+                onSingleClick="@{()->vm.selectParticipationFilter()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                app:filterName="@{vm.participationFilter.filterName}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <include
+                android:id="@+id/include_group_list_size_filter"
+                layout="@layout/include_group_filter"
+                onSingleClick="@{()->vm.selectSizeFilter()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                app:filterName="@{GroupFilter.SIZE_FILTER_SUBJECT}"
+                app:layout_constraintStart_toEndOf="@id/include_group_list_participation_filter"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <include
+                android:id="@+id/include_group_list_gender_filter"
+                layout="@layout/include_group_filter"
+                onSingleClick="@{()->vm.selectGenderFilter()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                app:filterName="@{GroupFilter.GENDER_FILTER_SUBJECT}"
+                app:layout_constraintStart_toEndOf="@id/include_group_list_size_filter"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_group_list_filter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/rcv_group_list_group"
+                app:layout_constraintTop_toBottomOf="@id/include_group_list_participation_filter"
+                tools:listitem="@layout/item_select_filter" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_group_list_group"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:paddingHorizontal="12dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rcv_group_list_filter"
+                tools:listitem="@layout/item_group" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
