feat: 마커 상세정보 그림자 구현

--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:background="@drawable/rect_white_fill_30"
+            android:elevation="10dp"
             android:gravity="center"
             android:paddingHorizontal="15dp"
             android:paddingVertical="10dp"
@@ -66,6 +67,7 @@
             android:id="@+id/vp_woof_pet_detail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@color/transparent"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:paddingHorizontal="20dp"
