--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -20,6 +20,7 @@
         android:layout_height="match_parent"
         android:layout_marginVertical="10dp"
         android:background="@drawable/rect_white_fill_30"
+        android:elevation="10dp"
         android:paddingVertical="20dp">
 
         <com.google.android.material.imageview.ShapeableImageView
