--- a/android/app/src/main/res/layout/activity_setting.xml
+++ b/android/app/src/main/res/layout/activity_setting.xml
@@ -75,19 +75,21 @@
             app:title="@{String.format(@string/alarm_settings_total_push)}" />
 
 
-        <Switch
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/alarm_settings_total_push_switch"
+            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:checked="@{vm.alarmPushPermitted}"
             android:onCheckedChanged="@{(view, checked) -> vm.onTotalAlarmToggled(checked)}"
-            android:thumb="@drawable/switch_thumb_selector"
-            android:track="@drawable/switch_track_selector"
             app:layout_constraintBottom_toBottomOf="@id/alarm_settings_total_push"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/alarm_settings_total_push" />
-
+            app:layout_constraintTop_toTopOf="@id/alarm_settings_total_push"
+            app:thumbTint="@color/sel_switch_thumb"
+            app:trackDecoration="@null"
+            app:trackTint="@color/sel_switch_track"
+            tools:checked="true" />
 
         <include
             android:id="@+id/alarm_settings_chatting_push"
@@ -104,18 +106,22 @@
             app:layout_constraintTop_toBottomOf="@+id/alarm_settings_total_push"
             app:title="@{String.format(@string/alarm_settings_chatting_push)}" />
 
-        <Switch
+
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/alarm_settings_chatting_push_switch"
+            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:checked="@{vm.alarmPushPermitted}"
             android:onCheckedChanged="@{(view, checked) -> vm.onChattingAlarmToggled(checked)}"
-            android:thumb="@drawable/switch_thumb_selector"
-            android:track="@drawable/switch_track_selector"
             app:layout_constraintBottom_toBottomOf="@id/alarm_settings_chatting_push"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/alarm_settings_chatting_push" />
+            app:layout_constraintTop_toTopOf="@id/alarm_settings_chatting_push"
+            app:thumbTint="@color/sel_switch_thumb"
+            app:trackDecoration="@null"
+            app:trackTint="@color/sel_switch_track"
+            tools:checked="true" />
 
 
         <include
@@ -133,19 +139,21 @@
             app:layout_constraintTop_toBottomOf="@+id/alarm_settings_chatting_push"
             app:title="@{String.format(@string/alarm_settings_club_push)}" />
 
-        <Switch
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/alarm_settings_club_push_switch"
+            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:checked="@{vm.alarmPushPermitted}"
             android:onCheckedChanged="@{(view, checked) -> vm.onClubAlarmToggled(checked)}"
-            android:thumb="@drawable/switch_thumb_selector"
-            android:track="@drawable/switch_track_selector"
             app:layout_constraintBottom_toBottomOf="@id/alarm_settings_club_push"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/alarm_settings_club_push" />
-
+            app:layout_constraintTop_toTopOf="@id/alarm_settings_club_push"
+            app:thumbTint="@color/sel_switch_thumb"
+            app:trackDecoration="@null"
+            app:trackTint="@color/sel_switch_track"
+            tools:checked="true" />
 
         <View
             android:id="@+id/view_divider"
