refactor: 알림 설정 데이터 바인딩

--- a/android/app/src/main/res/layout/activity_setting.xml
+++ b/android/app/src/main/res/layout/activity_setting.xml
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:checked="@{vm.alarmPushPermitted}"
+            android:checked="@{vm.uiState.totalAlarmPushPermitted}"
             android:onCheckedChanged="@{(view, checked) -> vm.onTotalAlarmToggled(checked)}"
             app:layout_constraintBottom_toBottomOf="@id/alarm_settings_total_push"
             app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:checked="@{vm.alarmPushPermitted}"
+            android:checked="@{vm.uiState.chattingAlarmPushPermitted}"
             android:onCheckedChanged="@{(view, checked) -> vm.onChattingAlarmToggled(checked)}"
             app:layout_constraintBottom_toBottomOf="@id/alarm_settings_chatting_push"
             app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:checked="@{vm.alarmPushPermitted}"
+            android:checked="@{vm.uiState.clubAlarmPushPermitted}"
             android:onCheckedChanged="@{(view, checked) -> vm.onClubAlarmToggled(checked)}"
             app:layout_constraintBottom_toBottomOf="@id/alarm_settings_club_push"
             app:layout_constraintEnd_toEndOf="parent"
