--- a/android/app/src/main/res/layout/fragment_my_page.xml
+++ b/android/app/src/main/res/layout/fragment_my_page.xml
@@ -153,7 +153,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/vp_dog_profile"
+                        android:id="@+id/vp_pet_profile"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -174,7 +174,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/vp_dog_profile"
+                        app:layout_constraintTop_toBottomOf="@+id/vp_pet_profile"
                         app:setUpIndicator="@{vm.uiState.pets.size()}" />
 
 
