refactor: UiState 및 UiModel 삭제

--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="petDetail"
-            type="com.happy.friendogly.presentation.ui.woof.uimodel.PetDetailUiModel" />
+            type="com.happy.friendogly.presentation.ui.woof.model.PetDetail" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
