--- a/android/app/src/main/res/layout/activity_setting_my_location.xml
+++ b/android/app/src/main/res/layout/activity_setting_my_location.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.happy.friendogly.presentation.ui.mylocation.SettingMyLocationViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.ui.mylocation.SettingMyLocationActivity">
@@ -18,6 +18,79 @@
         <com.naver.maps.map.MapView
             android:id="@+id/map_view_my_location"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
+
+        <View
+            android:id="@+id/view_my_location_top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="@color/gray50"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/ripple_circle_white"
+            android:src="@drawable/ic_close"
+            app:layout_constraintBottom_toBottomOf="@id/view_my_location_top_bar"
+            app:layout_constraintStart_toStartOf="@id/view_my_location_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_my_location_top_bar" />
+
+        <TextView
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/my_location_title"
+            app:layout_constraintBottom_toBottomOf="@id/view_my_location_top_bar"
+            app:layout_constraintEnd_toEndOf="@id/view_my_location_top_bar"
+            app:layout_constraintStart_toStartOf="@id/view_my_location_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_my_location_top_bar" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/gray50"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/my_location_content" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{vm.address.address}"
+                tools:text="대한민국 제주특별자치도 제주시 이도1동 1250-15" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginVertical="24dp"
+                android:background="@drawable/rect_coral04_fill_16"
+                android:backgroundTint="@color/coral400"
+                android:gravity="center"
+                android:text="@string/my_location_submit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
